--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 # To be able to run the app, copy this file to application.properties, and make sure the DB URL is correct.
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;user=sa;password=novasenha;databaseName=springbootdb
-spring.datasource.url=jdbc:sqlserver://den1.mssql8.gear.host:1433;user=worker;password=senha@123;databaseName=worker
+spring.datasource.url=jdbc:sqlserver://den1.mssql8.gear.host:1433;user=mssqlerp;password=novasenha@123;databaseName=mssqlerp
